# docx2elpx

./: EXEMARK.md  README.md  TODO.md  doc2elpx.spec  docx2elpx.py  idevices.txt  main.py  markref.md  md2elpx.py  project_rules.md  pyproject.toml  tmp_debug.txt
examples/: new.elpx
examples/new/: content.xml  index.html
new/: new.docx  ~$new.docx  ~WRL1401.tmp
new/output/: content.xml  index.html
new/output/html/: actividad-1.html  actividad-2.html  actividad.html  adicionales.html  capaces.html  dflkdsf.html  dsfdsf-asd-ds.html  esta-es-la-segunda-pagina.html  esta-es-la-tercera-pagina.html  evaluacion.html  inicial.html  otra-pagina.html  pagina-1.html  pagineaaef.html  planificacion.html  primera-pagina.html  recomendaciones.html  reflexion.html  reto.html  sd-sda-sdgad.html  sdfds-dsf-ds.html  sfddsf.html  trabajar.html  usbpagina.html
new/output/theme/: style.css
new/theme/: config.xml  style.js
template/: index.html
tmp/: ElpxExporter.ts  OdeXmlGenerator.ts  debug_xml.py  read_docx.py  test_compiler.py
tmp/test_output/content/resources/20260213105026402BGB/: SDA1SEC_T2_H5PN1_Cast_E4O.html
tmp/test_output/content/resources/20260213114120HCCRVJ/: Nivel2_1.html
