[project]
name = "doc2elpx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "livereload>=2.7.1",
    "lxml>=6.0.2",
    "mammoth>=1.12.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
